# asz-nexus-erp

./: .env.example  .gitignore  ARCHITECTURE_PRODUCTION_REFERENCE.md  AUTH_AUDIT_REPORT.md  BUNDLE_ANALYSIS.md  DEPLOYMENT_RUNBOOK.md  PRODUCTION_READINESS_REPORT.md  PRODUCTION_READINESS_SUMMARY.md  RELEASE_CHECKLIST.md  SECURITY_AUDIT_FIXES.md  SECURITY_AUDIT_REPORT.md  SECURITY_AUDIT_SUMMARY.md  drizzle.config.ts  index.html  package-lock.json  package.json  test_persistence.py  tsconfig.json  verify_db.py  vite.config.ts
company-wizard/: CompanyWizard.tsx
docs/: README.md  RELEASE_DAY_CARD.md  RELEASE_DAY_CARD_PRINTABLE.md  SQLITE_FIRST_IMPLEMENTATION.md
docs/adr/: 0001-desktop-first-tauri-architecture.md  0002-local-sqlite-with-drizzle.md  0003-hash-routing-and-module-chunking.md  README.md
src/: App.tsx  index.css  main.tsx  mockData.ts  types.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/certs/: tfc-erp.pfx
src-tauri/icons/: icon.icns
src-tauri/src/: error.rs  lib.rs  main.rs  state.rs  validation.rs
src-tauri/src/auth/: guards.rs  mod.rs  password.rs  session.rs  store.rs  tokens.rs
src-tauri/src/commands/: app.rs  auth.rs  backup.rs  company.rs  customer.rs  db.rs  employee.rs  file.rs  fs.rs  invoice.rs  item.rs  ledger.rs  mod.rs  payment.rs  supplier.rs  system.rs  updater.rs  window.rs
src-tauri/src/db/: connection.rs  helpers.rs  migrations.rs  mod.rs
src-tauri/src/db/migrations/: 0001_initial.sql  0002_app_flat_columns.sql  0002_caret_transactions.sql  0002_employee_department.sql  0003_erp_schema.sql  0003_production_indexes.sql
src-tauri/src/events/: emitter.rs  mod.rs
src-tauri/src/ipc/: mod.rs  response.rs
src-tauri/src/models/: caret.rs  company.rs  customer.rs  employee.rs  financial_year.rs  fruit.rs  invoice.rs  ledger.rs  mod.rs  payment.rs  supplier.rs  user.rs  variety.rs
src-tauri/src/repositories/: caret.rs  company.rs  customer.rs  employee.rs  fruit.rs  invoice.rs  ledger.rs  mod.rs  payment.rs  supplier.rs  variety.rs
src-tauri/src/services/: app.rs  demo_seed.rs  file.rs  fs.rs  mod.rs  window.rs
src/app/: AppShell.tsx
src/components/: Calculator.tsx  CaretModule.tsx  CustomerModule.tsx  ExecutiveDashboard.tsx  InventoryModule.tsx  InvoicePreviewModal.tsx  MasterModule.tsx  Navbar.tsx  PartiesModule.tsx  PaymentsModule.tsx  PurchaseBillingModule.tsx  PurchasePreviewModal.tsx  ReportsModule.tsx  SalesBillingModule.tsx  SettingsModule.tsx  SetupWizard.tsx  ShortcutsModal.tsx  SupplierModule.tsx  TopFilterBar.tsx  VehicleArrivalModule.tsx  VehiclePreviewModal.tsx  VehicleSpreadsheet.tsx
src/config/: app.config.ts  constants.ts  index.ts  (+1 more)
(+179 files in other folders)
